--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="menuzinho">
-        <a href="../pasta1/link/login.html">Cadastre-se | Login</a>
+        <a href="./link/login.html">Cadastre-se | Login</a>
         <a href="./link/contato.html">Contato</a>
             <form action="aojd.php">
                 <label for="ipesquisa"></label>
