--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam ut repudiandae aliquam molestias optio quasi autem pariatur nobis, ipsam possimus commodi voluptatum quibusdam ratione blanditiis placeat, velit laboriosam quam delectus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto deleniti, itaque quas cumque cupiditate consectetur eum rerum neque nostrum fugiat incidunt fuga placeat enim nisi vel quaerat explicabo deserunt et? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni perspiciatis excepturi iusto voluptate praesentium, in maxime qui quasi esse consequatur repellat velit saepe officia pariatur, tempora ipsam quibusdam iure accusantium?</p>
             </article>
         </section>
-        <video src="../pasta1/videos/VID-20230118-WA0000.mp4" class="video" controls></video>
+        <video src="./videos/VID-20230118-WA0000.mp4" class="video" controls></video>
         <section class="local">
             <article>
                 <h1>Onde Fica o salão</h1>
