--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <menu>
             <ul id="ul" style="display: none;">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li><a href="link/agendamento.html">AGENDAMENTO</a></li>
                 <li><a href="link/contato.html">SOCIAIS</a></li>
             </ul>
