--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="menuzinho">
-        <a href="/link/login.html">Cadastre-se | Login</a>
-        <a href="/link/contato.html">Contato</a>
+        <a href="link/login.html">Cadastre-se | Login</a>
+        <a href="link/contato.html">Contato</a>
             <form action="aojd.php">
                 <label for="ipesquisa"></label>
                 <input type="search" name="pesquisa" id="ipesquisa" placeholder="Pesquise o que for necessario">
