--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <section class="local">
             <article>
                 <h1>Onde Fica o salão</h1>
+                
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d432.5207483087456!2d-43.52137014918247!3d-22.71173215126969!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x995df9123ac0bb%3A0xa550f944da8f9bcf!2sBarbearia%20gigantes!5e0!3m2!1spt-BR!2sbr!4v1678842824786!5m2!1spt-BR!2sbr" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                
                 <p> Av. de exemplo N 52</p>
                 <p> Rua em frente ao bar</p>
                 <p> Nova Iguaçu - Austin</p>
