--- a/index.html
+++ b/index.html
@@ -60,13 +60,7 @@
 </body>
 </html>
 
-<script>
-    function oneclick(){
-        var menu =
-            document.getElementById('ul');
-            if (menu.style.display == "block"){
-                menu.style.display = "none"
-            } else menu.style.display = "block"
-        }
+<script src="index.js">
+
 </script>
 
